# ur5_robotiq140_kinect

./: README.md  ur5_robotiq140_kinect.yaml
ur5_gripper/: CMakeLists.txt  package.xml
ur5_gripper/description/launch/: spawn_kinect.launch  ur5_gripper_upload.launch  view_ur5_gripper.launch
ur5_gripper/description/urdf/: grasp_plugin.xacro  kinect_plugin.urdf.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_transmission.xacro  ur5_gripper_generated.urdf  ur5_gripper_robot.urdf.xacro
ur5_gripper/gazebo/controller/: robotiq140_gripper_controller.yaml
ur5_gripper/gazebo/launch/: cubeworld_only.launch  ur5_gripper.launch
ur5_gripper/interfaces/: CMakeLists.txt
ur5_gripper/interfaces/include/: ur5_gripper_interface.h
ur5_gripper/interfaces/src/: ur5_gripper_interface.cpp
ur5_gripper/world/: cubeworld.world  cubeworld2.world  cubeworld3.world
ur5_gripper/world/models/cafe_box/: model.config  model.sdf
ur5_gripper/world/models/cylinder/: model.sdf
ur5_gripper/world/models/ivar_chair/: model.config  model.sdf
ur5_gripper/world/models/ivar_chair/meshes/: 0.dae  1.dae  2.dae  3.dae  4.dae
ur5_gripper/world/models/ivar_chair/part0/: model.config  model.sdf
ur5_gripper/world/models/ivar_chair/part1/: model.config  model.sdf
ur5_gripper/world/models/ivar_chair/part2/: model.config  model.sdf
ur5_gripper/world/models/ivar_chair/part3/: model.config  model.sdf
ur5_gripper/world/models/ivar_chair/part4/: model.config  model.sdf
ur5_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  segmentation.cpp
ur5_gripper_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  ur5.srdf
ur5_gripper_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_gripper_moveit_planning_execution.launch  ur5_moveit_sensor_manager.launch.xml
ur5_gripper_moveit_config/python_interface/: CMakeLists.txt
ur5_gripper_moveit_config/python_interface/launch/: python_interface.launch
ur5_gripper_moveit_config/python_interface/scripts/: python_interface.py
