<?xml version="1.0"?>
<package format="2">
    <name>ur5_gripper</name>
    <version>0.0.2</version>
    <description>
    This package provides an implementation of ur5 robot with robotiq_ar2f_140 gripper and kinect.
    </description>
    <maintainer email="ozgraslan17@gmail.com">Ozgur</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ur_description</build_depend>
    <build_depend>ur_gazebo</build_depend>
    <build_depend>kinect_description</build_depend>
    <build_depend>robotiq_2f_140_gripper_visualization</build_depend>
    <build_depend>robotiq_ft_sensor</build_depend>
</package>