<?xml version="1.0"?>
<package format="2">
    <name>ur5_gripper</name>
    <version>0.0.1</version>
    <description>
    This package provides an implementation of ur5 robot with robotiq_ar2f_140 gripper and kinect.
    </description>
    <maintainer email="ozgraslan17@gmail.com">Ozgur</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ur_description</build_depend>
    <build_depend>ur_gazebo</build_depend>
    <build_depend>common_sensors</build_depend>
    <build_depend>robotiq_2f_140_gripper_visualization</build_depend>
    <build_depend>robotiq_ft_sensor</build_depend>
    <build_depend>roboticsgroup_gazebo_plugins</build_depend>
    <build_depend>gazebo_grasp_plugin</build_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gripper_action_controller</exec_depend>
    <export>
        <gazebo_ros gazebo_model_path="${prefix}/world/models"/>
        <gazebo_ros gazebo_media_path="${prefix}/world/models"/>
    </export>
</package>